Massive Update 2: See Pull Request for full breakdown of all changes
